[package]
name = "bevy-procedural-grass"
description = "A procedural grass system for the Bevy game engine."
version = "0.1.0"
edition = "2021"
categories = ["graphics", "rendering", "game-development", "simulation"]
keywords = ["gamedev", "graphics", "bevy", "procedural", "grass"]
homepage = "https://bevy-procedural.org/grass"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bevy-procedural/grass"
documentation = "https://docs.bevy-procedural.org/grass"
rust-version = "1.76.0"

[workspace]
members = ["editor"]

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
map_flatten = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
# missing_docs = "warn"

[lints]
workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"

[[example]]
name = "simple"
path = "examples/simple.rs"
doc-scrape-examples = true
