[package]
name = "bevy-procedural-grass"
description = "A procedural grass system for the Bevy game engine."
version = "0.1.0"
edition = "2021"
categories = ["graphics", "rendering", "game-development", "simulation"]
keywords = ["gamedev", "graphics", "bevy", "procedural", "grass"]
homepage = "https://bevy-procedural.org/grass"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bevy-procedural/grass"
documentation = "https://docs.bevy-procedural.org/grass"
rust-version = "1.76.0"

[workspace]
members = ["editor", "components"]

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
map_flatten = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
# missing_docs = "warn"

[lints]
workspace = true

[dependencies]
components = { path = "components" }
# IMPORTANT: when using hot reloading with `hot-lib-reloader`, you must use the exact same version of all dependencies in all crates!
bevy = "0.12.1"
bevy_editor_pls = { version = "0.7.0", optional = true }
hot-lib-reloader = { version = "0.7.0", optional = true }
bevy-inspector-egui = { version = "0.22.1", optional = true }

[features]
default = []
hot_reload = [
    "bevy/dynamic_linking",
    "components/hot_reload",
    "dep:hot-lib-reloader",
    "dep:bevy_editor_pls",
    "dep:bevy-inspector-egui",
]

[[example]]
name = "simple"
path = "examples/simple.rs"
doc-scrape-examples = true

[profile.dev.package."*"]
opt-level = 3
