[package]
name = "components"
version = "0.1.0"
edition = "2021"

[dependencies]
# IMPORTANT: when using hot reloading with `hot-lib-reloader`, you must use the exact same version of all dependencies in all crates!
bevy = "0.12.1"
bevy_editor_pls = { version = "0.7.0", optional = true }
hot-lib-reloader = { version = "0.7.0", optional = true }
bevy-inspector-egui = "0.22.1"

[features]
default = []
hot_reload = [
    "bevy/dynamic_linking",
    "dep:hot-lib-reloader",
    "dep:bevy_editor_pls",
]
