[package]
name = "editor"
description = "An Egui-based editor for the procedural-grass crate"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.22.1"
bevy_editor_pls = "0.7.0"

[dependencies.procedural-grass]
path = "../"

[lints]
workspace = true

[package.metadata]
hot_reload_features = ["bevy/dynamic_linking", "bevy/embedded_watcher"]
