[package]
name = "editor"
description = "An Egui-based editor for the bey_procedural_meadows crate"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.22.1"
bevy_editor_pls = "0.7.0"

[dependencies.bey_procedural_meadows]
path = "../"

[lints]
workspace = true

[package.metadata]
hot_reload_features = ["bevy/dynamic_linking", "bevy/embedded_watcher"]
